--- a/lab5/app/src/main/AndroidManifest.xml
+++ b/lab5/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ImageOverlayActivity"></activity>
+        <activity android:name=".FiltersActivity"></activity>
+        <activity android:name=".ImageOverlayActivity" />
         <activity android:name=".SplitByColorsActivity" />
         <activity android:name=".InverseImageActivity" />
         <activity android:name=".ApplyAColorFilterActivity" />
